Create TreeNode structure

--- a/ThreeAlgorithmTasks/ThreeAlgorithmTasks.vcxproj.filters
+++ b/ThreeAlgorithmTasks/ThreeAlgorithmTasks.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="ThreeAlgorithmTasks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Forms.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
