--- a/ThreeAlgorithmTasks/ThreeAlgorithmTasks.vcxproj
+++ b/ThreeAlgorithmTasks/ThreeAlgorithmTasks.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Forms.cpp" />
     <ClCompile Include="ThreeAlgorithmTasks.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
